kubernetes/jabeh/07-02-ingress-jabeh-cdn-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jabeh-cdn-ingress
  namespace: jabeh
spec:
  rules:
  - host: frcdn.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
  - host: cdn.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
  - host: jb-cdn.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
  - host: ircache1.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
  - host: ircache2.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
  - host: ircache3.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
